miss : トラブル対応中

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,12 @@
--[ ] Controllerクラスの命名
-    -[ ] このクラスは必要か
-    -[ ] Fieldクラスのmoveと重複
+-[x] Controllerクラスの命名
+    -[x] このクラスは必要か
+    -[x] Fieldクラスのmoveと重複
 -[ ] Fieldクラスのmoveメソッド
     -[ ] moveメソッドで敵と衝突した判定をどう決める？
+-[x] キャラクターの戦いを表現
+    -[x] 登場人物の決定
+    -[x] 勝利条件の決定
+    -[x] 勝敗が決まるまでループ
 -[x] Fieldクラスにて、ある地点の文字を知る
 -[x] Fieldクラスのmoveメソッドをリファクタリング
     -[x] 名前の見直し
